# money-dairy-lovers

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_RULES.md  LICENSE  Makefile  README.md  TODO.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  secure-setup.sh  start-production.sh  test_auth.py
backend/: .dockerignore  Dockerfile  alembic.ini  create_migration.sh  init.sql  pyproject.toml  requirements-dev.txt  requirements.txt  reset_password.py
backend/alembic/: env.py
backend/alembic/versions/: 0fc9cf0a5617_add_income_categories.py  8eb9cc48da19_add_partnership_invitations_table.py  add_love_memories_table.py  e8f434d7c412_add_recurring_transactions_table.py  f733c9b043f9_initial_migration_with_all_tables.py
backend/app/: main.py
backend/app/api/: categories.py.backup  notifications.py  recurring_transactions.py  users.py
backend/app/core/: config.py  deps.py  init_db.py  security.py
backend/app/db/: base.py  session.py
backend/app/middleware/: security.py
backend/app/models/: __init__.py  budget.py  category.py  email_verification.py  love_event.py  love_memory.py  notification.py  partnership.py  partnership_invitation.py  password_reset.py  recurring_transaction.py  transaction.py  user.py
backend/app/schemas/: __init__.py  auth.py  budget.py  category.py  dashboard.py  love.py  notification.py  partnership.py  recurring_transaction.py  report.py  token.py  transaction.py  user.py
backend/scripts/: run_tests.sh  test_one.sh  update_email_verified.py
backend/tests/: conftest.py  test_auth.py  test_budgets.py  test_categories.py  test_simple.py  test_transactions.py
docs/: api.md  (+5 more)
(+203 files in other folders)
